[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/menus/shop/stat_container.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=2]
[ext_resource path="res://resources/fonts/actual/base/font_small_button.tres" type="DynamicFont" id=3]
[ext_resource path="res://ui/menus/global/my_menu_button.gd" type="Script" id=4]
[ext_resource path="res://ui/menus/shop/secondary_stat_container.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/menus/shop/secondary_stats_container.gd" type="Script" id=6]
[ext_resource path="res://ui/menus/shop/general_stats_container.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/menus/shop/stats_container.gd" type="Script" id=22]

[node name="StatsContainer" type="PanelContainer"]
self_modulate = Color( 1, 1, 1, 0.478431 )
margin_top = 132.0
margin_right = 384.0
margin_bottom = 368.0
rect_min_size = Vector2( 384, 782 )
theme = ExtResource( 2 )
script = ExtResource( 22 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 379.0
margin_bottom = 1341.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 364.0
margin_bottom = 1326.0
custom_constants/separation = 20

[node name="StatsLabel" type="Label" parent="MarginContainer/VBoxContainer2"]
margin_right = 354.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
size_flags_vertical = 8
text = "STATS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
margin_top = 80.0
margin_right = 354.0
margin_bottom = 131.0
custom_constants/separation = 10
alignment = 1

[node name="Primary" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
margin_left = 7.0
margin_right = 157.0
margin_bottom = 51.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 3 )
text = "PRIMARY"
clip_text = true
script = ExtResource( 4 )

[node name="Secondary" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
margin_left = 167.0
margin_right = 347.0
margin_bottom = 51.0
rect_min_size = Vector2( 180, 0 )
custom_fonts/font = ExtResource( 3 )
text = "SECONDARY"
clip_text = true
script = ExtResource( 4 )

[node name="GeneralStats" parent="MarginContainer/VBoxContainer2" instance=ExtResource( 7 )]
margin_top = 151.0
margin_bottom = 181.0

[node name="PrimaryStats" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 201.0
margin_right = 354.0
margin_bottom = 696.0
custom_constants/separation = 1

[node name="MaxHPContainer" parent="MarginContainer/VBoxContainer2/PrimaryStats" instance=ExtResource( 1 )]
margin_right = 354.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}
key = "STAT_MAX_HP"

[node name="HPRegenerationContainer" parent="MarginContainer/VBoxContainer2/PrimaryStats" instance=ExtResource( 1 )]
margin_top = 31.0
margin_right = 354.0
margin_bottom = 61.0
__meta__ = {
"_edit_use_anchors_": false
}
key = "STAT_HP_REGENERATION"

[node name="LifeStealContainer" parent="MarginContainer/VBoxContainer2/PrimaryStats" instance=ExtResource( 1 )]
margin_top = 62.0
margin_right = 354.0
margin_bottom = 92.0
__meta__ = {
"_edit_use_anchors_": false
}
key = "STAT_LIFESTEAL"

[node name="PercentDamageContainer" parent="MarginContainer/VBoxContainer2/PrimaryStats" instance=ExtResource( 1 )]
margin_top = 93.0
margin_right = 354.0
margin_bottom = 123.0
__meta__ = {
"_edit_use_anchors_": false
}
key = "STAT_PERCENT_DAMAGE"

[node name="MeleeDamageContainer" parent="MarginContainer/VBoxContainer2/PrimaryStats" instance=ExtResource( 1 )]
margin_top = 124.0
margin_right = 354.0
margin_bottom = 154.0
__meta__ = {
"_edit_use_anchors_": false
}
key = "STAT_MELEE_DAMAGE"

[node name="RangedDamageContainer" parent="MarginContainer/VBoxContainer2/PrimaryStats" instance=ExtResource( 1 )]
margin_top = 155.0
margin_right = 354.0
margin_bottom = 185.0
__meta__ = {
"_edit_use_anchors_": false
}
key = "STAT_RANGED_DAMAGE"

[node name="ElementalDamageContainer" parent="MarginContainer/VBoxContainer2/PrimaryStats" instance=ExtResource( 1 )]
margin_top = 186.0
margin_right = 354.0
margin_bottom = 216.0
__meta__ = {
"_edit_use_anchors_": false
}
key = "STAT_ELEMENTAL_DAMAGE"

[node name="AttackSpeedContainer" parent="MarginContainer/VBoxContainer2/PrimaryStats" instance=ExtResource( 1 )]
margin_top = 217.0
margin_right = 354.0
margin_bottom = 247.0
__meta__ = {
"_edit_use_anchors_": false
}
key = "STAT_ATTACK_SPEED"

[node name="CritChanceContainer" parent="MarginContainer/VBoxContainer2/PrimaryStats" instance=ExtResource( 1 )]
margin_top = 248.0
margin_right = 354.0
margin_bottom = 278.0
__meta__ = {
"_edit_use_anchors_": false
}
key = "STAT_CRIT_CHANCE"

[node name="EngineeringContainer" parent="MarginContainer/VBoxContainer2/PrimaryStats" instance=ExtResource( 1 )]
margin_top = 279.0
margin_right = 354.0
margin_bottom = 309.0
__meta__ = {
"_edit_use_anchors_": false
}
key = "STAT_ENGINEERING"

[node name="RangeContainer" parent="MarginContainer/VBoxContainer2/PrimaryStats" instance=ExtResource( 1 )]
margin_top = 310.0
margin_right = 354.0
margin_bottom = 340.0
__meta__ = {
"_edit_use_anchors_": false
}
key = "STAT_RANGE"

[node name="ArmorContainer" parent="MarginContainer/VBoxContainer2/PrimaryStats" instance=ExtResource( 1 )]
margin_top = 341.0
margin_right = 354.0
margin_bottom = 371.0
__meta__ = {
"_edit_use_anchors_": false
}
key = "STAT_ARMOR"

[node name="DodgeContainer" parent="MarginContainer/VBoxContainer2/PrimaryStats" instance=ExtResource( 1 )]
margin_top = 372.0
margin_right = 354.0
margin_bottom = 402.0
__meta__ = {
"_edit_use_anchors_": false
}
key = "STAT_DODGE"

[node name="SpeedContainer" parent="MarginContainer/VBoxContainer2/PrimaryStats" instance=ExtResource( 1 )]
margin_top = 403.0
margin_right = 354.0
margin_bottom = 433.0
__meta__ = {
"_edit_use_anchors_": false
}
key = "STAT_SPEED"

[node name="LuckContainer" parent="MarginContainer/VBoxContainer2/PrimaryStats" instance=ExtResource( 1 )]
margin_top = 434.0
margin_right = 354.0
margin_bottom = 464.0
__meta__ = {
"_edit_use_anchors_": false
}
key = "STAT_LUCK"

[node name="HarvestingContainer" parent="MarginContainer/VBoxContainer2/PrimaryStats" instance=ExtResource( 1 )]
margin_top = 465.0
margin_right = 354.0
margin_bottom = 495.0
__meta__ = {
"_edit_use_anchors_": false
}
key = "STAT_HARVESTING"

[node name="SecondaryStats" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 716.0
margin_right = 354.0
margin_bottom = 1316.0
custom_constants/separation = 0
script = ExtResource( 6 )

[node name="ConsumableHealContainer" parent="MarginContainer/VBoxContainer2/SecondaryStats" instance=ExtResource( 5 )]
margin_right = 354.0
margin_bottom = 30.0
key = "CONSUMABLE_HEAL"

[node name="MaterialsHealContainer" parent="MarginContainer/VBoxContainer2/SecondaryStats" instance=ExtResource( 5 )]
margin_top = 30.0
margin_right = 354.0
margin_bottom = 60.0
key = "heal_when_pickup_gold"
custom_text_key = "CHANCE_HEAL_ON_GOLD"

[node name="XPGainContainer" parent="MarginContainer/VBoxContainer2/SecondaryStats" instance=ExtResource( 5 )]
margin_top = 60.0
margin_right = 354.0
margin_bottom = 90.0
key = "XP_GAIN"

[node name="PickupRangeContainer" parent="MarginContainer/VBoxContainer2/SecondaryStats" instance=ExtResource( 5 )]
margin_top = 90.0
margin_right = 354.0
margin_bottom = 120.0
key = "PICKUP_RANGE"

[node name="ItemPriceContainer" parent="MarginContainer/VBoxContainer2/SecondaryStats" instance=ExtResource( 5 )]
margin_top = 120.0
margin_right = 354.0
margin_bottom = 150.0
key = "ITEMS_PRICE"
reverse = true

[node name="ExplosionDamageContainer" parent="MarginContainer/VBoxContainer2/SecondaryStats" instance=ExtResource( 5 )]
margin_top = 150.0
margin_right = 354.0
margin_bottom = 180.0
key = "EXPLOSION_DAMAGE"

[node name="ExplosionSizeContainer" parent="MarginContainer/VBoxContainer2/SecondaryStats" instance=ExtResource( 5 )]
margin_top = 180.0
margin_right = 354.0
margin_bottom = 210.0
key = "EXPLOSION_SIZE"

[node name="BounceContainer" parent="MarginContainer/VBoxContainer2/SecondaryStats" instance=ExtResource( 5 )]
margin_top = 210.0
margin_right = 354.0
margin_bottom = 240.0
key = "BOUNCE"

[node name="PiercingContainer" parent="MarginContainer/VBoxContainer2/SecondaryStats" instance=ExtResource( 5 )]
margin_top = 240.0
margin_right = 354.0
margin_bottom = 270.0
key = "PIERCING"

[node name="PiercingDamageContainer" parent="MarginContainer/VBoxContainer2/SecondaryStats" instance=ExtResource( 5 )]
margin_top = 270.0
margin_right = 354.0
margin_bottom = 300.0
key = "PIERCING_DAMAGE"

[node name="DamageAgainstBossesContainer" parent="MarginContainer/VBoxContainer2/SecondaryStats" instance=ExtResource( 5 )]
margin_top = 300.0
margin_right = 354.0
margin_bottom = 330.0
key = "DAMAGE_AGAINST_BOSSES"

[node name="BurningCooldownReductionContainer" parent="MarginContainer/VBoxContainer2/SecondaryStats" instance=ExtResource( 5 )]
margin_top = 330.0
margin_right = 354.0
margin_bottom = 360.0
key = "BURNING_COOLDOWN_REDUCTION"

[node name="BurningSpreadContainer" parent="MarginContainer/VBoxContainer2/SecondaryStats" instance=ExtResource( 5 )]
margin_top = 360.0
margin_right = 354.0
margin_bottom = 390.0
key = "BURNING_SPREAD"

[node name="KnockbackContainer" parent="MarginContainer/VBoxContainer2/SecondaryStats" instance=ExtResource( 5 )]
margin_top = 390.0
margin_right = 354.0
margin_bottom = 420.0
key = "KNOCKBACK"

[node name="ChanceDoubleGoldContainer" parent="MarginContainer/VBoxContainer2/SecondaryStats" instance=ExtResource( 5 )]
margin_top = 420.0
margin_right = 354.0
margin_bottom = 450.0
key = "CHANCE_DOUBLE_GOLD"

[node name="ItemBoxGoldContainer" parent="MarginContainer/VBoxContainer2/SecondaryStats" instance=ExtResource( 5 )]
margin_top = 450.0
margin_right = 354.0
margin_bottom = 480.0
key = "ITEM_BOX_GOLD"

[node name="FreeRerollsContainer" parent="MarginContainer/VBoxContainer2/SecondaryStats" instance=ExtResource( 5 )]
margin_top = 480.0
margin_right = 354.0
margin_bottom = 510.0
key = "FREE_REROLLS"

[node name="TreesContainer" parent="MarginContainer/VBoxContainer2/SecondaryStats" instance=ExtResource( 5 )]
margin_top = 510.0
margin_right = 354.0
margin_bottom = 540.0
key = "TREES"

[node name="NumberOfEnemiesContainer" parent="MarginContainer/VBoxContainer2/SecondaryStats" instance=ExtResource( 5 )]
margin_top = 540.0
margin_right = 354.0
margin_bottom = 570.0
key = "NUMBER_OF_ENEMIES"
custom_text_key = "PCT_NUMBER_OF_ENEMIES"

[node name="EnemySpeedContainer" parent="MarginContainer/VBoxContainer2/SecondaryStats" instance=ExtResource( 5 )]
margin_top = 570.0
margin_right = 354.0
margin_bottom = 600.0
key = "ENEMY_SPEED"
custom_text_key = "PCT_ENEMY_SPEED"
reverse = true

[node name="EnemyDamageContainer" parent="MarginContainer/VBoxContainer2/SecondaryStats" instance=ExtResource( 5 )]
visible = false
margin_top = 600.0
margin_right = 354.0
margin_bottom = 630.0
key = "ENEMY_DAMAGE"
reverse = true

[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/Primary" to="." method="_on_Primary_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/Secondary" to="." method="_on_Secondary_pressed"]
